<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <RelativeLayout 
        android:id="@+id/header"
        android:background="#45A4EB"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView 
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:textColor="#ffffff"
            android:clickable="true"
            android:text="@string/backbtn"/>
        <TextView 
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:textColor="#ffffff"
            android:clickable="true"
            android:text="@string/contackbtn"/>
        
            <ImageView
            android:id="@+id/dispic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/profilepic"
            android:src="@drawable/monitor"
            android:contentDescription="@null"
            android:layout_marginTop="8dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
        <TextView 
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:layout_below="@+id/dispic"
            android:textColor="#ffffff"
            android:text="@string/username"
            android:textSize="20sp"/>
        <TextView 
            android:id="@+id/dot"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/username"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textStyle="bold"
            android:text="@string/dot"/>
        <TextView 
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/dot"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/username"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:text="@string/addr"/>
        
        <TextView 
            android:id="@+id/checkins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/dot"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/username"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:text="@string/checkin"/>
        
        <TextView 
            android:id="@+id/member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
  			android:layout_centerHorizontal="true"
            android:layout_below="@+id/dot"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:text="@string/member"/>
        
        <LinearLayout 
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:weightSum="2.0"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
           android:layout_below="@+id/member">
            
            <Button 
                android:id="@+id/notification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:layout_marginRight="4dp"
                android:background="@drawable/notification"
                android:drawableLeft="@drawable/ring"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/off"/>
            
            <Button 
                android:id="@+id/totfrnds"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
				android:drawableLeft="@drawable/tick"
                android:drawablePadding="4dp"
                android:background="@drawable/frndbtn"
                android:text="@string/frnd"/>
            
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/btns1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/options"
            android:orientation="horizontal"
			android:layout_marginTop="3dp"
            android:weightSum="3.0">
            <Button 
                android:id="@+id/friends"
                android:layout_width="0dp"
                android:layout_height="match_parent"           
                android:paddingTop="18dp"
                android:layout_weight="1.0"
                android:background="#E5F6FF"
                android:drawableTop="@drawable/monitor"
                android:text="@string/frndscount"/>
            <Button  
                android:id="@+id/stats"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingTop="18dp"
                android:layout_weight="1.0"
                android:background="#F5C129"
                android:drawableTop="@drawable/crown_black"
                android:text="@string/stats"/>
            <Button  
                android:id="@+id/photos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingTop="18dp"
                android:layout_weight="1.0"
                android:background="#3283B6"
                android:drawableTop="@drawable/ic_menu_photocamera"
                android:text="@string/photos"/>
        </LinearLayout>
    </RelativeLayout>
    
	<RelativeLayout
    	android:id="@+id/footer"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent">
        
	    <LinearLayout 
	        android:id="@+id/btns2"
	        android:layout_width="match_parent"
	        android:layout_height="70dp"
	        android:layout_marginLeft="8dp"
    		android:layout_marginRight="8dp" 
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:background="#ffffff"
            android:weightSum="3.0">
	        
	         <Button  
                android:id="@+id/tips"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingTop="18dp"
                android:layout_weight="1.0"
                android:background="#45A4EB"
                android:drawableTop="@drawable/chat_black"
                android:text="@string/tips"/>
	          <Button  
                android:id="@+id/badge"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingTop="18dp"
                android:layout_weight="1.0"
                android:background="#E39919"
                android:drawableTop="@drawable/black_pin"
                android:text="@string/badge"/>
	           <Button  
                android:id="@+id/lists"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingTop="18dp"
                android:layout_weight="1.0"
                android:background="#86D606"
                android:drawableTop="@drawable/ic_list"
                android:text="@string/lists"/>
	        
	    </LinearLayout>
	    
	    <ListView 
	        android:id="@android:id/list"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:cacheColorHint="@android:color/transparent"
	        tools:listitem="@layout/list_item"
	        android:layout_below="@+id/btns2">
	    </ListView>
	</RelativeLayout>

</LinearLayout>
